--- a/index.html
+++ b/index.html
@@ -5,18 +5,23 @@
     <link rel="icon" type="image/svg+xml" href="/techpaglu.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Techpaglu - calculate your tech enthusiasm score</title>
+    
     <meta name="title" content="Techpaglu" />
     <meta name="description" content="Calculate your tech enthusiasm score based on your tweets - share with your friends" />
+    
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://techpaglu.vercel.app" />
     <meta property="og:title" content="Techpaglu" />
-    <meta property="og:description" content="Calculate your tech enthusiasm score based on your tweets - share with you friends" />
-    <meta property="og:image" content="/preview.png" />
+    <meta property="og:description" content="Calculate your tech enthusiasm score based on your tweets - share with your friends" />
+    <meta property="og:image" content="https://ik.imagekit.io/e3zsheqim/Screenshot%202025-03-29%20074132.png?updatedAt=1743215855149" />
+
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://techpaglu.vercel.app" />
     <meta property="twitter:title" content="Techpaglu" />
-    <meta property="twitter:description" content="Calculate your tech enthusiasm score based on your tweets - share with you friends" />
+    <meta property="twitter:description" content="Calculate your tech enthusiasm score based on your tweets - share with your friends" />
     <meta property="twitter:image" content="https://ik.imagekit.io/e3zsheqim/Screenshot%202025-03-29%20074132.png?updatedAt=1743215855149" />
+    <meta name="twitter:site" content="@aniketvish0" />
+    <meta name="twitter:creator" content="@aniketvish0" />
   </head>
   <body>
     <div id="root"></div>
