--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <meta property="og:description" content="Calculate your tech enthusiasm score based on your tweets - share with your friends" />
     <meta property="og:image" content="https://ik.imagekit.io/e3zsheqim/Screenshot%202025-03-29%20074132.png?updatedAt=1743215855149" />
 
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://techpaglu.vercel.app" />
-    <meta property="twitter:title" content="Techpaglu" />
-    <meta property="twitter:description" content="Calculate your tech enthusiasm score based on your tweets - share with your friends" />
-    <meta property="twitter:image" content="https://ik.imagekit.io/e3zsheqim/Screenshot%202025-03-29%20074132.png?updatedAt=1743215855149" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://techpaglu.vercel.app" />
+    <meta name="twitter:title" content="Techpaglu" />
+    <meta name="twitter:description" content="Calculate your tech enthusiasm score based on your tweets - share with your friends" />
+    <meta name="twitter:image" content="https://ik.imagekit.io/e3zsheqim/Screenshot%202025-03-29%20074132.png?updatedAt=1743215855149" />
     <meta name="twitter:site" content="@aniketvish0" />
     <meta name="twitter:creator" content="@aniketvish0" />
   </head>
