fix:twitter meta url

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta name="twitter:url" content="https://techpaglu.vercel.app" />
     <meta name="twitter:title" content="Techpaglu" />
     <meta name="twitter:description" content="Calculate your tech enthusiasm score based on your tweets - share with your friends" />
-    <meta name="twitter:image" content="https://ik.imagekit.io/e3zsheqim/Screenshot%202025-03-29%20074132.png?updatedAt=1743215855149" />
+    <meta name="twitter:image" content="https://previews.jumpshare.com/thumb/815bc01b796dd6f1733c957c5af19493060a29e7185197a06f2fc432bc9c73d312140070cc0a2d0fc829e696fc9e17b41f1e72d9ec8c85bbbc7782373d48ae1e03e65ba6a6bf81d8e964bb795f024504" />
     <meta name="twitter:site" content="@aniketvish0" />
     <meta name="twitter:creator" content="@aniketvish0" />
   </head>
